Fix docker
